added apis to swagger docs
